Fixed overlaping menu and Header

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -17,3 +17,8 @@
       z-index: 3;
       position: relative;
   }
+
+  .main{
+    height: 100%;
+    overflow: auto; 
+  }
